Feature #Castrel-001 Update JVM options and base image to JDK in Dockerfiles and configuration